--- a/requirements.txt
+++ b/requirements.txt
@@ -40,15 +40,19 @@ numpy==1.26.4
 openai==1.61.1
 orjson==3.10.15
 packaging==24.2
+pandas==2.2.3
 propcache==0.2.1
 pydantic==2.10.6
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+six==1.17.0
 sniffio==1.3.1
 socksio==1.0.0
 SQLAlchemy==2.0.38
@@ -57,6 +61,7 @@ tiktoken==0.9.0
 tqdm==4.67.1
 typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2025.2
 urllib3==2.3.0
 yarl==1.18.3
 zstandard==0.23.0
